updated backend and frontend