@@ -1,10 +1,11 @@
 package com.substring.auth.app.security;
 
-import com.substring.auth.app.auth.model.Role;
-import com.substring.auth.app.auth.model.User;
+import com.substring.auth.app.entities.Role;
+import com.substring.auth.app.entities.User;
 import io.jsonwebtoken.*;
 import io.jsonwebtoken.security.Keys;
 import lombok.Getter;
+import lombok.Setter;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 
@@ -15,43 +16,45 @@ import java.util.Date;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
+@Getter
+@Setter
 public class JwtService {
 
     private final SecretKey key;
     private final long accessTtlSeconds;
-    @Getter
     private final long refreshTtlSeconds;
     private final String issuer;
 
     public JwtService(
             @Value("${security.jwt.secret}") String secret,
-            @Value("${security.jwt.access-ttl-seconds:900}") long accessTtlSeconds,         // 15 minutes
-            @Value("${security.jwt.refresh-ttl-seconds:1209600}") long refreshTtlSeconds,   // 14 days
-            @Value("${security.jwt.issuer:auth-backend}") String issuer
-    ) {
+            @Value("${security.jwt.access-ttl-seconds}") long accessTtlSeconds,
+            @Value("${security.jwt.refresh-ttl-seconds}") long refreshTtlSeconds,
+            @Value("${security.jwt.issuer}") String issuer) {
+
         if (secret == null || secret.length() < 64) {
-            throw new IllegalStateException("JWT secret must be at least 64 characters. Provide via env JWT_SECRET.");
+            throw new IllegalArgumentException("Invalid secret");
         }
+
         this.key = Keys.hmacShaKeyFor(secret.getBytes(StandardCharsets.UTF_8));
         this.accessTtlSeconds = accessTtlSeconds;
         this.refreshTtlSeconds = refreshTtlSeconds;
         this.issuer = issuer;
     }
 
+    //generate token:
     public String generateAccessToken(User user) {
         Instant now = Instant.now();
         List<String> roles = user.getRoles() == null ? List.of() :
-                user.getRoles().stream().map(Role::getName).collect(Collectors.toList());
+                user.getRoles().stream().map(Role::getName).toList();
         return Jwts.builder()
-                .setId(UUID.randomUUID().toString())
-                .setSubject(user.getId().toString())
-                .setIssuer(issuer)
-                .setIssuedAt(Date.from(now))
-                .setExpiration(Date.from(now.plusSeconds(accessTtlSeconds)))
-                .addClaims(Map.of(
+                .id(UUID.randomUUID().toString())
+                .subject(user.getId().toString())
+                .issuer(issuer)
+                .issuedAt(Date.from(now))
+                .expiration(Date.from(now.plusSeconds(accessTtlSeconds)))
+                .claims(Map.of(
                         "email", user.getEmail(),
                         "roles", roles,
                         "typ", "access"
@@ -60,44 +63,57 @@ public class JwtService {
                 .compact();
     }
 
+    // generate refreshotken.
     public String generateRefreshToken(User user, String jti) {
         Instant now = Instant.now();
         return Jwts.builder()
-                .setId(jti)
-                .setSubject(user.getId().toString())
-                .setIssuer(issuer)
-                .setIssuedAt(Date.from(now))
-                .setExpiration(Date.from(now.plusSeconds(refreshTtlSeconds)))
+                .id(jti)
+                .subject(user.getId().toString())
+                .issuer(issuer)
+                .issuedAt(Date.from(now))
+                .expiration(Date.from(now.plusSeconds(refreshTtlSeconds)))
                 .claim("typ", "refresh")
                 .signWith(key, SignatureAlgorithm.HS512)
                 .compact();
     }
 
+    //parse the token
+
     public Jws<Claims> parse(String token) {
-        try {
-            return Jwts.parserBuilder().setSigningKey(key).build().parseClaimsJws(token);
-        } catch (JwtException e) {
-            throw e;
-        }
+        return Jwts.parser().verifyWith(key).build().parseSignedClaims(token);
     }
 
     public boolean isAccessToken(String token) {
-        Claims c = parse(token).getBody();
+        Claims c = parse(token).getPayload();
         return "access".equals(c.get("typ"));
     }
 
+
     public boolean isRefreshToken(String token) {
-        Claims c = parse(token).getBody();
+        Claims c = parse(token).getPayload();
         return "refresh".equals(c.get("typ"));
     }
 
     public UUID getUserId(String token) {
-        Claims c = parse(token).getBody();
+        Claims c = parse(token).getPayload();
         return UUID.fromString(c.getSubject());
     }
 
     public String getJti(String token) {
-        return parse(token).getBody().getId();
+        return parse(token).getPayload().getId();
     }
+
+    public List<String> getRoles(String token) {
+        Claims c = parse(token).getPayload();
+        return (List<String>) c.get("roles");
+    }
+
+    public String getEmail(String token) {
+        Claims c = parse(token).getPayload();
+        return (String) c.get("email");
+    }
+
+
+
 
 }
